tambah text romantic di bagian atas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Amirah Maimun</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
 </head>
@@ -15,6 +15,10 @@
         <div class="lingkaran lingkaran-2"></div>
         <div class="lingkaran lingkaran-3"></div>
         <div class="lingkaran lingkaran-4"></div>
+        <div class="moving-text-wrapper-top">
+            <p class="moving-text-top">With every heartbeat, my love for you grows stronger</p>
+            <p class="moving-text-top">With every heartbeat, my love for you grows stronger</p>
+        </div>
         <div class="upper-star-wrapper">
             <img src="img/bintang.png" alt="" />
             <img src="img/bintang.png" alt="" />
