tambah teks romantis bagian bawah dan kotak2 kecil

--- a/index.html
+++ b/index.html
@@ -15,9 +15,23 @@
         <div class="lingkaran lingkaran-2"></div>
         <div class="lingkaran lingkaran-3"></div>
         <div class="lingkaran lingkaran-4"></div>
-        <div class="moving-text-wrapper-top">
-            <p class="moving-text-top">With every heartbeat, my love for you grows stronger</p>
-            <p class="moving-text-top">With every heartbeat, my love for you grows stronger</p>
+        <div class="kotak-wrapper kotak-wrapper-top">
+            <div class="kotak kotak-top"></div>
+            <div class="kotak kotak-top"></div>
+            <div class="kotak kotak-top"></div>
+        </div>
+        <div class="kotak-wrapper kotak-wrapper-bottom">
+            <div class="kotak kotak-bottom"></div>
+            <div class="kotak kotak-bottom"></div>
+            <div class="kotak kotak-bottom"></div>
+        </div>
+        <div class="moving-wrapper moving-text-wrapper-top">
+            <p class="moving-text moving-text-top">With every heartbeat, my love for you grows stronger</p>
+            <p class="moving-text moving-text-top">With every heartbeat, my love for you grows stronger</p>
+        </div>
+        <div class="moving-wrapper moving-text-wrapper-bottom">
+            <p class="moving-text moving-text-bottom">Is there anything better than your smile? I don't think so</p>
+            <p class="moving-text moving-text-bottom">Is there anything better than your smile? I don't think so</p>
         </div>
         <div class="upper-star-wrapper">
             <img src="img/bintang.png" alt="" />
