tambah transisi ketika klik continue

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="pickup-wrapper">
             <p class="pickup">Do you believe in love at first sight, or should I walk by again?</p>
-            <button type="button">Continue</button>
+            <button type="button" id="continue">Continue</button>
         </div>
         <div class="lower-star-wrapper">
             <img src="img/bintang.png" alt="" />
@@ -48,12 +48,17 @@
             <img src="img/bintang.png" alt="" />
         </div>
     </div>
+    <p class="selamat">Hi, Mira.</p>
+    <div class="intro-transition">
+    </div>
     <div class="container">
         <div class="title-wrapper">
             <p class="sub-title">The elegant beauty of</p>
             <p class="name">Amirah Maimun</p>
         </div>
     </div>
+
+    <script src="js/script.js" defer></script>
 </body>
 
 </html>
