tambah hiasan di halaman utama

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
     <title>Amirah Maimun</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
@@ -48,12 +48,28 @@
             <img src="img/bintang.png" alt="" />
         </div>
     </div>
-    <p class="selamat">Hi, Mira.</p>
+    <p class="selamat">I Love You, Mira.</p>
     <div class="intro-transition">
     </div>
     <div class="container">
+        <div class="garis garis-atas"></div>
+        <div class="garis garis-bawah"></div>
+        <div class="lingkaran-container-blur-1 lingkaran-container-blur"></div>
+        <div class="lingkaran-container-blur-2 lingkaran-container-blur"></div>
+        <div class="kotak-container kotak-container-1"></div>
+        <div class="kotak-container kotak-container-2"></div>
+        <div class="kotak-container-wrapper-atas">
+            <div class="kotak-container-atas kotak-container-atas-1"></div>
+            <div class="kotak-container-atas kotak-container-atas-2"></div>
+            <div class="kotak-container-atas kotak-container-atas-3"></div>
+        </div>
+        <div class="kotak-container-wrapper-bawah">
+            <div class="kotak-container-bawah kotak-container-bawah-1"></div>
+            <div class="kotak-container-bawah kotak-container-bawah-2"></div>
+            <div class="kotak-container-bawah kotak-container-bawah-3"></div>
+        </div>
         <div class="title-wrapper">
-            <p class="sub-title">The elegant beauty of</p>
+            <p class="sub-title">The Enchanting Beauty of</p>
             <p class="name">Amirah Maimun</p>
         </div>
     </div>
