tambah transisi intro and tambah cubic bezier

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         </div>
     </div>
     <p class="selamat">I Love You, Mira.</p>
-    <div class="intro-transition">
+    <div class="intro-transition intro-transition-front">
+    </div>
+    <div class="intro-transition intro-transition-behind">
     </div>
     <div class="container">
         <div class="garis garis-atas"></div>
