tambah card mira

--- a/index.html
+++ b/index.html
@@ -1,82 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, height=device-height"
+    />
     <title>Amirah Maimun</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/font.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/font.css" />
+  </head>
 
-<body>
+  <body>
     <div class="intro-container">
-        <div class="lingkaran lingkaran-1"></div>
-        <div class="lingkaran lingkaran-2"></div>
-        <div class="lingkaran lingkaran-3"></div>
-        <div class="lingkaran lingkaran-4"></div>
-        <div class="kotak-wrapper kotak-wrapper-top">
-            <div class="kotak kotak-top"></div>
-            <div class="kotak kotak-top"></div>
-            <div class="kotak kotak-top"></div>
-        </div>
-        <div class="kotak-wrapper kotak-wrapper-bottom">
-            <div class="kotak kotak-bottom"></div>
-            <div class="kotak kotak-bottom"></div>
-            <div class="kotak kotak-bottom"></div>
-        </div>
-        <div class="moving-wrapper moving-text-wrapper-top">
-            <p class="moving-text moving-text-top">With every heartbeat, my love for you grows stronger</p>
-            <p class="moving-text moving-text-top">With every heartbeat, my love for you grows stronger</p>
-        </div>
-        <div class="moving-wrapper moving-text-wrapper-bottom">
-            <p class="moving-text moving-text-bottom">Is there anything better than your smile? I don't think so</p>
-            <p class="moving-text moving-text-bottom">Is there anything better than your smile? I don't think so</p>
-        </div>
-        <div class="upper-star-wrapper">
-            <img src="img/bintang.png" alt="" />
-            <img src="img/bintang.png" alt="" />
-            <img src="img/bintang.png" alt="" />
-        </div>
-        <div class="pickup-wrapper">
-            <p class="pickup">Do you believe in love at first sight, or should I walk by again?</p>
-            <button type="button" id="continue">Continue</button>
-        </div>
-        <div class="lower-star-wrapper">
-            <img src="img/bintang.png" alt="" />
-            <img src="img/bintang.png" alt="" />
-            <img src="img/bintang.png" alt="" />
-        </div>
+      <div class="lingkaran lingkaran-1"></div>
+      <div class="lingkaran lingkaran-2"></div>
+      <div class="lingkaran lingkaran-3"></div>
+      <div class="lingkaran lingkaran-4"></div>
+      <div class="kotak-wrapper kotak-wrapper-top">
+        <div class="kotak kotak-top"></div>
+        <div class="kotak kotak-top"></div>
+        <div class="kotak kotak-top"></div>
+      </div>
+      <div class="kotak-wrapper kotak-wrapper-bottom">
+        <div class="kotak kotak-bottom"></div>
+        <div class="kotak kotak-bottom"></div>
+        <div class="kotak kotak-bottom"></div>
+      </div>
+      <div class="moving-wrapper moving-text-wrapper-top">
+        <p class="moving-text moving-text-top">
+          With every heartbeat, my love for you grows stronger
+        </p>
+        <p class="moving-text moving-text-top">
+          With every heartbeat, my love for you grows stronger
+        </p>
+      </div>
+      <div class="moving-wrapper moving-text-wrapper-bottom">
+        <p class="moving-text moving-text-bottom">
+          Is there anything better than your smile? I don't think so
+        </p>
+        <p class="moving-text moving-text-bottom">
+          Is there anything better than your smile? I don't think so
+        </p>
+      </div>
+      <div class="upper-star-wrapper">
+        <img src="img/bintang.png" alt="" />
+        <img src="img/bintang.png" alt="" />
+        <img src="img/bintang.png" alt="" />
+      </div>
+      <div class="pickup-wrapper">
+        <p class="pickup">
+          Do you believe in love at first sight, or should I walk by again?
+        </p>
+        <button type="button" id="continue">Continue</button>
+      </div>
+      <div class="lower-star-wrapper">
+        <img src="img/bintang.png" alt="" />
+        <img src="img/bintang.png" alt="" />
+        <img src="img/bintang.png" alt="" />
+      </div>
     </div>
     <p class="selamat">I Love You, Mira.</p>
-    <div class="intro-transition intro-transition-front">
-    </div>
-    <div class="intro-transition intro-transition-behind">
-    </div>
+    <div class="intro-transition intro-transition-front"></div>
+    <div class="intro-transition intro-transition-behind"></div>
     <div class="container">
-        <div class="garis garis-atas"></div>
-        <div class="garis garis-bawah"></div>
-        <div class="lingkaran-container-blur-1 lingkaran-container-blur"></div>
-        <div class="lingkaran-container-blur-2 lingkaran-container-blur"></div>
-        <div class="kotak-container kotak-container-1"></div>
-        <div class="kotak-container kotak-container-2"></div>
-        <div class="kotak-container-wrapper-atas">
-            <div class="kotak-container-atas kotak-container-atas-1"></div>
-            <div class="kotak-container-atas kotak-container-atas-2"></div>
-            <div class="kotak-container-atas kotak-container-atas-3"></div>
-        </div>
-        <div class="kotak-container-wrapper-bawah">
-            <div class="kotak-container-bawah kotak-container-bawah-1"></div>
-            <div class="kotak-container-bawah kotak-container-bawah-2"></div>
-            <div class="kotak-container-bawah kotak-container-bawah-3"></div>
-        </div>
-        <div class="title-wrapper">
-            <p class="sub-title">The Enchanting Beauty of</p>
-            <p class="name">Amirah Maimun</p>
-        </div>
+      <div class="garis garis-atas"></div>
+      <div class="garis garis-bawah"></div>
+      <div class="lingkaran-container-blur-1 lingkaran-container-blur"></div>
+      <div class="lingkaran-container-blur-2 lingkaran-container-blur"></div>
+      <div class="kotak-container kotak-container-1"></div>
+      <div class="kotak-container kotak-container-2"></div>
+      <div class="kotak-container-wrapper-atas">
+        <div class="kotak-container-atas kotak-container-atas-1"></div>
+        <div class="kotak-container-atas kotak-container-atas-2"></div>
+        <div class="kotak-container-atas kotak-container-atas-3"></div>
+      </div>
+      <div class="kotak-container-wrapper-bawah">
+        <div class="kotak-container-bawah kotak-container-bawah-1"></div>
+        <div class="kotak-container-bawah kotak-container-bawah-2"></div>
+        <div class="kotak-container-bawah kotak-container-bawah-3"></div>
+      </div>
+      <div class="title-wrapper">
+        <p class="sub-title">The Enchanting Beauty of</p>
+        <p class="name">Amirah Maimun</p>
+      </div>      
     </div>
+    <div class="mira-card">
+        <div class="lingkaran-mira-card lingkaran-biru"></div>
+        <div class="lingkaran-mira-card lingkaran-kuning"></div>
+        <div class="mira-image-wrapper">
+          <div class="mira-image"></div>
+          <div class="text-wrapper">
+            <div class="title-wrapper-image">
+              <span class="marker-kotak"></span>
+              <div class="title-inner-wrapper">
+                <span class="title">A-doll-able Mira</span>
+                <span class="desc">Date : 13 July 2003</span>
+              </div>
+            </div>
+            <div class="star-wrapper">
+              <img src="/img/bintang-hitam.png" alt="" />
+              <img src="/img/bintang-hitam.png" alt="" />
+              <img src="/img/bintang-hitam.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
 
     <script src="js/script.js" defer></script>
-</body>
-
+  </body>
 </html>
